# learning-python

./: LICENSE  README.md  pyproject.toml
core_python/corepy/: words.py
environments/api/: api-test.py  meraki_api.py
environments/web-scraping/: Pipfile  authentication.py  config.yml  pyproject.toml  sharepoint_scraper.py
pluralsight/corepy/: airtravel.py  bmp.py  exceptional.py  files.py  fractal.py  generators.py  recaman.py  roots.py  series.py  words.py
pluralsight/phonebook_pytest/: phonebook.py  test_phonebook.py
pluralsight/phonebook_unittest/: phonebook.py  test_phonebook.py
pluralsight/unittesting/: phonebook.py  pyproject.toml  test_phonebook.py
python_morsels/: get_earliest.py
