[tool.poetry]
name = "web-scraping"
version = "0.1.0"
description = ""
authors = ["Jon Husen <jon.husen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0"
html2text = "^2020.1.16"
msal = "^1.20.0"
beautifulsoup4 = "^4.11.1"
selenium = "^4.5.0"
html5lib = "^1.1"
cchardet = "^2.1.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
