[tool.poetry]
name = "unittesting"
version = "0.1.0"
description = "Pluralsight - Unit Testing with Python"
authors = ["Jon Husen <jon.husen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
